# agent-client-sdk-package

./: AGENTS.md  Cargo.toml  LICENSE  README.md  README_zh.md
crates/claude-code/: Cargo.toml  README.md  README_zh.md
crates/claude-code/src/: client.rs  errors.rs  internal_client.rs  lib.rs  message_parser.rs  query.rs  query_fn.rs  sdk_mcp.rs  sessions.rs  types.rs
crates/claude-code/src/transport/: mod.rs  subprocess_cli.rs
crates/claude-code/tests/: agent_definition_tests.rs  buffering_tests.rs  client_tests.rs  concurrency_tests.rs  e2e_agents_settings_tests.rs  e2e_hooks_tests.rs  e2e_sdk_mcp_tools_tests.rs  e2e_structured_output_tests.rs  e2e_subprocess_mock_tests.rs  error_handling_tests.rs  errors_tests.rs  message_parser_tests.rs  query_callbacks_tests.rs  query_stream_api_tests.rs  sdk_mcp_tests.rs  sessions_tests.rs  settings_tests.rs  structured_output_tests.rs  transport_command_tests.rs  types_tests.rs
crates/claude-code/tests/fixtures/: mock_claude_cli.py
crates/codex/: Cargo.toml  README.md  README_zh.md
crates/codex/src/: codex.rs  codex_options.rs  errors.rs  events.rs  exec.rs  items.rs  lib.rs  output_schema_file.rs  thread.rs  thread_options.rs
crates/codex/tests/: exec_tests.rs  run_tests.rs
crates/opencode/: Cargo.toml  README.md  README_zh.md
crates/opencode/src/: client.rs  errors.rs  lib.rs  server.rs  types.rs
crates/opencode/tests/: client_tests.rs  server_tests.rs
crates/opencode/tests/fixtures/: mock_opencode_cli.py
unified-agent-sdk/: ARCHITECTURE.md  Cargo.toml  README.md  README_zh.md  ROADMAP.md
unified-agent-sdk/src/: error.rs  event.rs  executor.rs  lib.rs  log.rs  profile.rs  session.rs  types.rs
unified-agent-sdk/src/adapters/: claude_code.rs  codex.rs  mod.rs
unified-agent-sdk/src/event/: converter.rs
unified-agent-sdk/src/normalizers/: claude_code.rs  codex.rs  mod.rs
unified-agent-sdk/src/providers/: mod.rs
unified-agent-sdk/src/providers/claude_code/: executor.rs  mod.rs  normalizer.rs  profile.rs
unified-agent-sdk/src/providers/codex/: executor.rs  mod.rs  profile.rs
unified-agent-sdk/tests/: event_flow_integration_tests.rs
