[package]
name = "unified-agent-sdk"
version = "0.1.0"
edition = "2024"
authors = ["Vibe Kanban Contributors"]
description = "Unified SDK for multiple AI coding agents"
license = "Apache-2.0"
repository = "https://github.com/tosimpletech/agent-client-sdk-package"
homepage = "https://github.com/tosimpletech/agent-client-sdk-package"
documentation = "https://docs.rs/unified-agent-sdk"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
pin-project = "1"
claude-code-client-sdk = { version = "=0.1.55", path = "../crates/claude-code" }
which = { workspace = true }
codex = { package = "codex-client-sdk", version = "=0.107.0", path = "../crates/codex" }
