[package]
name = "claude-code-client-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
which = "8"
