[package]
name = "claude-code-client-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "claude_code"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
which = "8"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user"] }
