[package]
name = "claude-code-client-sdk"
version = "0.1.46"
edition = "2024"
rust-version = "1.85"
description = "Rust SDK for integrating Claude Code as a subprocess with typed APIs"
license = "Apache-2.0"
repository = "https://github.com/tosimpletech/agent-client-sdk-package"
keywords = ["claude", "agent", "sdk", "anthropic"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "claude_code"

[dependencies]
async-trait = "0.1"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = "1"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
which = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user"] }
