[package]
name = "codex-client-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "codex"

[dependencies]
async-stream = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
which = "8"
